--- a/views/test.ejs
+++ b/views/test.ejs
@@ -1,6 +1,50 @@
 <h1>test</h1>
+<center>
 <ul>
-<% patient_tests.forEach(test => { %>
-   <li>test name: <%= test.test_name  %>  Doctor name: <%= test.dr_name  %>   result: <a href="../file_uploads/<%= test.file_filename  %> " target="_blank" rel="noopener noreferrer" class="view_filee">View File</a>   patient id:<%= test.file_id  %></li>
-    <% }) %>
+  <% patient_tests.forEach(test => { %>
+    <li>
+      <span class="label">Test name:</span> <%= test.test_name %><br>
+      <span class="label">Doctor name:</span> <%= test.dr_name %><br>
+      <span class="label">Result:</span> <a href="../file_uploads/<%= test.file_filename %>" target="_blank" rel="noopener noreferrer" class="view_filee">View File</a><br>
+      <span class="label">Patient ID:</span> <%= test.file_id %>
+    </li>
+  <% }) %>
 </ul>
+</center>
+<STyle> 
+    body {
+    font-family: Arial, sans-serif;
+    background-color: white;
+    color: rgb(3, 49, 92);
+  }
+  
+  h1 {
+    font-size: 24px;
+    font-weight: bold;
+    color: rgb(3, 49, 92);
+  }
+  
+  ul {
+    list-style-type: none;
+    padding: 0;
+  }
+  
+  li {
+    margin-bottom: 10px;
+  }
+  
+  .label {
+    font-weight: bold;
+  }
+  
+  .view_filee {
+    color: rgb(3, 49, 92);
+    text-decoration: none;
+    border-bottom: 1px solid rgb(3, 49, 92);
+  }
+  
+  .view_filee:hover {
+    color: rgb(3, 49, 92);
+    border-bottom: 1px solid transparent;
+  }
+  </STyle>
