--- a/views/admition.ejs
+++ b/views/admition.ejs
@@ -16,7 +16,7 @@
     <div  class="left_add">
       <div class="left_nav">
         <center>
-          <a href="">
+          <a href="admissionPatient">
             <i class="fa-solid fa-hospital-user"></i>
             <p>Today's Patient</p>
           </a>
@@ -24,7 +24,7 @@
       </div>
       <div class="left_nav">
         <center>
-          <a href="">
+          <a href="admition">
             <i class="fa-solid fa-file-waveform" style="color: #9fc2e1;"></i>
             <p style="color: #9fc2e1;">Patient Files</p>
           </a>
@@ -34,6 +34,30 @@
     </div>
 
     <div class="right">
+      <style>
+        #logoutForm button{
+          border-radius: 5px;
+          float: right;
+          background-color: #9fc2e1;
+          color: white;
+          padding: 7px;
+          border: none;
+      font-size: 1.2em
+      
+        }
+      </style>
+          <div class="right">
+            <form id="logoutForm" action="/logout" method="POST"> <!-- Form submission method set to POST -->
+              <input type="hidden" name="_method" id="methodOverride" value="DELETE"> <!-- Method override for DELETE -->
+              <input type="hidden" name="originalMethod" value="POST"> <!-- Store the original method -->
+              <button type="submit">Log Out</button> <!-- Submit button -->
+          </form>
+          <script>
+            document.getElementById("logoutForm").addEventListener("submit", function(event) {
+                const originalMethod = document.getElementById("logoutForm").elements["originalMethod"].value;
+                document.getElementById("methodOverride").value = originalMethod; // Set method override to original method
+            });
+        </script>
     <input type="text" style="margin-left: 20px;" class="it_search" id="searchInput" placeholder="Search..." onkeyup="searchFunction()" />
     <center>
     
