--- a/views/lab.ejs
+++ b/views/lab.ejs
@@ -13,6 +13,30 @@
     <title>LAb</title>
   </head>
 <body>
+  <style>
+    #logoutForm button{
+      border-radius: 5px;
+      float: right;
+      background-color: #9fc2e1;
+      color: white;
+      padding: 7px;
+      border: none;
+  font-size: 1.2em
+  
+    }
+  </style>
+      <div class="right">
+        <form id="logoutForm" action="/logout" method="POST"> <!-- Form submission method set to POST -->
+          <input type="hidden" name="_method" id="methodOverride" value="DELETE"> <!-- Method override for DELETE -->
+          <input type="hidden" name="originalMethod" value="POST"> <!-- Store the original method -->
+          <button type="submit">Log Out</button> <!-- Submit button -->
+      </form>
+      <script>
+        document.getElementById("logoutForm").addEventListener("submit", function(event) {
+            const originalMethod = document.getElementById("logoutForm").elements["originalMethod"].value;
+            document.getElementById("methodOverride").value = originalMethod; // Set method override to original method
+        });
+    </script>
     <br>
     <input style="margin: 20px;" type="text" class="it_search"id="searchInput" placeholder="Search..." onkeyup="searchFunction()" />
 
