--- a/views/scan.ejs
+++ b/views/scan.ejs
@@ -14,6 +14,30 @@
   </head>
 <body>
     <style>
+        #logoutForm button{
+          border-radius: 5px;
+          float: right;
+          background-color: #9fc2e1;
+          color: white;
+          padding: 7px;
+          border: none;
+      font-size: 1.2em
+      
+        }
+      </style>
+          <div class="right">
+            <form id="logoutForm" action="/logout" method="POST"> <!-- Form submission method set to POST -->
+              <input type="hidden" name="_method" id="methodOverride" value="DELETE"> <!-- Method override for DELETE -->
+              <input type="hidden" name="originalMethod" value="POST"> <!-- Store the original method -->
+              <button type="submit">Log Out</button> <!-- Submit button -->
+          </form>
+          <script>
+            document.getElementById("logoutForm").addEventListener("submit", function(event) {
+                const originalMethod = document.getElementById("logoutForm").elements["originalMethod"].value;
+                document.getElementById("methodOverride").value = originalMethod; // Set method override to original method
+            });
+        </script>
+    <style>
         .scan-grid-container {
     position: relative;
     padding: 10px;
@@ -28,9 +52,7 @@ background-color:#9fc2e1;
             grid-template-columns: 2fr 1fr; /* Two equal columns */
         }
         
-        .scan-left-grid,
-        .scan-right-grid {
-        }
+
         .scan-right-grid {
             border-left: 1px solid lightgrey;
         }
