--- a/views/admition.ejs
+++ b/views/admition.ejs
@@ -18,7 +18,7 @@
         <center>
           <a href="admissionPatient">
             <i class="fa-solid fa-hospital-user"></i>
-            <p>Today's Patient</p>
+            <p>Admitted Patients</p>
           </a>
         </center>
       </div>
