--- a/views/casesHistory.ejs
+++ b/views/casesHistory.ejs
@@ -11,49 +11,121 @@
       <div class="asa2">
         <fieldset>
           <legend>SDS History and Nursing Assessment 1/2</legend>
-        
-        <p><span class="question">date_time:</span> <span class="answer"><%= casee.q1 %></span></p>
-        <p><span class="question">mode_of_arrival:</span> <span class="answer"><%= casee.q2 %></span></p>
-        
-        <p><span class="question">planned_surgery_name:</span> <span class="answer"><%= casee.q3 %></span></p>
-        <p><span class="question">site_of_planned_surgery:</span> <span class="answer"><%= casee.q4 %></span></p>
-        <p><span class="question">admission_through:</span> <span class="answer"><%= casee.q5 %></span></p>
-        <p><span class="question">emotional_status:</span> <span class="answer"><%= casee.q6 %></span></p>
+          <div class="question-answer-pair">
+            <span class="question">date_time:</span>
+            <div class="answer"><%= casee.q1 %></div>
+          </div>
+          <div class="question-answer-pair">
+            <span class="question">mode_of_arrival:</span>
+            <div class="answer"><%= casee.q2 %></div>
+          </div>
+          <div class="question-answer-pair">
+            <span class="question">planned_surgery_name:</span>
+            <div class="answer"><%= casee.q3 %></div>
+          </div>
+          <div class="question-answer-pair">
+            <span class="question">site_of_planned_surgery:</span>
+            <div class="answer"><%= casee.q4 %></div>
+          </div>
+          <div class="question-answer-pair">
+            <span class="question">admission_through:</span>
+            <div class="answer"><%= casee.q5 %></div>
+          </div>
+          <div class="question-answer-pair">
+            <span class="question">emotional_status:</span>
+            <div class="answer"><%= casee.q6 %></div>
+          </div>
         </fieldset>
+        
         <fieldset>
-          <legend>Biographic Data
-          </legend>
-        <p><span class="question">marital_status:</span> <span class="answer"><%= casee.q7 %></span></p>
-        <p><span class="question">profession:</span> <span class="answer"><%= casee.q8 %></span></p>
-        <p><span class="question">patient_height:</span> <span class="answer"><%= casee.q9 %></span></p>
-        <p><span class="question">patient_weight:</span> <span class="answer"><%= casee.q10 %></span></p>
+          <legend>Biographic Data</legend>
+          <div class="question-answer-pair">
+            <span class="question">marital_status:</span>
+            <div class="answer"><%= casee.q7 %></div>
+          </div>
+          <div class="question-answer-pair">
+            <span class="question">profession:</span>
+            <div class="answer"><%= casee.q8 %></div>
+          </div>
+          <div class="question-answer-pair">
+            <span class="question">patient_height:</span>
+            <div class="answer"><%= casee.q9 %></div>
+          </div>
+          <div class="question-answer-pair">
+            <span class="question">patient_weight:</span>
+            <div class="answer"><%= casee.q10 %></div>
+          </div>
         </fieldset>
+        
         <fieldset>
           <legend>Functional Data</legend>
-        <p><span class="question">ambulating:</span> <span class="answer"><%= casee.q11 %></span></p>
-        <p><span class="question">feeding:</span> <span class="answer"><%= casee.q12 %></span></p>
-        <p><span class="question">bathing:</span> <span class="answer"><%= casee.q13 %></span></p>
-        <p><span class="question">blood_group:</span> <span class="answer"><%= casee.q14 %></span></p>
+          <div class="question-answer-pair">
+            <span class="question">ambulating:</span>
+            <div class="answer"><%= casee.q11 %></div>
+          </div>
+          <div class="question-answer-pair">
+            <span class="question">feeding:</span>
+            <div class="answer"><%= casee.q12 %></div>
+          </div>
+          <div class="question-answer-pair">
+            <span class="question">bathing:</span>
+            <div class="answer"><%= casee.q13 %></div>
+          </div>
+          <div class="question-answer-pair">
+            <span class="question">blood_group:</span>
+            <div class="answer"><%= casee.q14 %></div>
+          </div>
         </fieldset>
+        
         <fieldset>
-          <legend>Life style and health practices
-          </legend>
-        <p><span class="question">alcohol:</span> <span class="answer"><%= casee.q15 %></span></p>
-        <p><span class="question">exercise:</span> <span class="answer"><%= casee.q16 %></span></p>
-        <p><span class="question">smoking:</span> <span class="answer"><%= casee.q17 %></span></p>
-        <p><span class="question">dietary_habits:</span> <span class="answer"><%= casee.q18 %></span></p>
+          <legend>Life style and health practices</legend>
+          <div class="question-answer-pair">
+            <span class="question">alcohol:</span>
+            <div class="answer"><%= casee.q15 %></div>
+          </div>
+          <div class="question-answer-pair">
+            <span class="question">exercise:</span>
+            <div class="answer"><%= casee.q16 %></div>
+          </div>
+          <div class="question-answer-pair">
+            <span class="question">smoking:</span>
+            <div class="answer"><%= casee.q17 %></div>
+          </div>
+          <div class="question-answer-pair">
+            <span class="question">dietary_habits:</span>
+            <div class="answer"><%= casee.q18 %></div>
+          </div>
         </fieldset>
+        
         <fieldset>
           <legend>Allergies</legend>
-        <p><span class="question">modify_allergy:</span> <span class="answer"><%= casee.q19 %></span></p>
-        <p><span class="question">allergy_to_contrast:</span> <span class="answer"><%= casee.q20 %></span></p>
+          <div class="question-answer-pair">
+            <span class="question">modify_allergy:</span>
+            <div class="answer"><%= casee.q19 %></div>
+          </div>
+          <div class="question-answer-pair">
+            <span class="question">allergy_to_contrast:</span>
+            <div class="answer"><%= casee.q20 %></div>
+          </div>
         </fieldset>
+        
         <fieldset>
           <legend>Health History</legend>
-        <p><span class="question">past_medical_history:</span> <span class="answer"><%= casee.q21 %></span></p>
-        <p><span class="question">past_surgical_history:</span> <span class="answer"><%= casee.q22 %></span></p>
-        <p><span class="question">special_medical_considerations:</span> <span class="answer"><%= casee.q23 %></span></p>
+          <div class="question-answer-pair">
+            <span class="question">past_medical_history:</span>
+            <div class="answer"><%= casee.q21 %></div>
+          </div>
+          <div class="question-answer-pair">
+            <span class="question">past_surgical_history:</span>
+            <div class="answer"><%= casee.q22 %></div>
+          </div>
+          <div class="question-answer-pair">
+            <span class="question">special_medical_considerations:</span>
+            <div class="answer"><%= casee.q23 %></div>
+          </div>
         </fieldset>
+        
+        
         </div>
         
     </li>
@@ -77,7 +149,10 @@
     list-style-type: none;
     padding: 0;
   }
-  
+.answer{
+  color: rgb(3, 49, 92);
+
+}
   .scan_page {
     background-color: #9fc2e1;
     margin-top: 10px;
@@ -89,5 +164,19 @@
   .scan_page span {
     color: white;
   }
-  
+  .question-answer-pair {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.question {
+  font-weight: bold;
+  margin-right: 10px;
+}
+
+.answer {
+  flex-grow: 1;
+}
+
   </style>
